🐛 Fix bottom-border radius being clipped

--- a/packages/react/src/components/Accordion/Accordion.module.css
+++ b/packages/react/src/components/Accordion/Accordion.module.css
@@ -23,6 +23,8 @@
   --fdsc-accordion-content-border-open: var(--fds-semantic-border-neutral-strong);
 
   border-bottom: 1px solid var(--fdsc-accordion-content-border);
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .border {
